--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-downsample
 original
-todo
 history
+samples/Dance - Unsteady.webm
+samples/Dance - Slip.webm
+samples/Dance - ITZY Practice.webm
+samples/Dance - BlackPink.webm
+samples/Dance - BTS Practice.webm
