--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
 original
-samples/Dance - Unsteady.webm
-samples/Dance - Slip.webm
-samples/Dance - ITZY Practice.webm
-samples/Dance - BlackPink.webm
-samples/Dance - BTS Practice.webm
+local
